WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165757
REGRESSION (
r198990
): Cannot edit content inside <details> in wysiwyg editor
https://bugs.webkit.org/show_bug.cgi?id=165757
Summary
REGRESSION (r198990): Cannot edit content inside <details> in wysiwyg editor
Antti Koivisto
Reported
2016-12-12 07:27:25 PST
<body contenteditable> <details open> <p>edit me</p> </details> is not editable
Attachments
wip
(13.45 KB, patch)
2016-12-12 07:32 PST
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(996.97 KB, application/zip)
2016-12-12 08:35 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(851.14 KB, application/zip)
2016-12-12 08:39 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-yosemite
(1.65 MB, application/zip)
2016-12-12 08:45 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(9.44 MB, application/zip)
2016-12-12 08:50 PST
,
Build Bot
no flags
Details
patch
(14.05 KB, patch)
2016-12-13 06:13 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-12-12 07:32:31 PST
Created
attachment 296916
[details]
wip
Build Bot
Comment 2
2016-12-12 08:35:44 PST
Comment on
attachment 296916
[details]
wip
Attachment 296916
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2705424
New failing tests: editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 3
2016-12-12 08:35:47 PST
Created
attachment 296918
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2016-12-12 08:39:35 PST
Comment on
attachment 296916
[details]
wip
Attachment 296916
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2705432
New failing tests: editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 5
2016-12-12 08:39:38 PST
Created
attachment 296919
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-12-12 08:45:04 PST
Comment on
attachment 296916
[details]
wip
Attachment 296916
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2705427
New failing tests: editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 7
2016-12-12 08:45:07 PST
Created
attachment 296921
[details]
Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-12-12 08:50:11 PST
Comment on
attachment 296916
[details]
wip
Attachment 296916
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2705440
New failing tests: editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 9
2016-12-12 08:50:15 PST
Created
attachment 296922
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 10
2016-12-13 06:13:40 PST
Created
attachment 297010
[details]
patch
Antti Koivisto
Comment 11
2016-12-13 07:57:18 PST
rdar://problem/27991971
WebKit Commit Bot
Comment 12
2016-12-13 08:08:38 PST
Comment on
attachment 297010
[details]
patch Clearing flags on attachment: 297010 Committed
r209756
: <
http://trac.webkit.org/changeset/209756
>
WebKit Commit Bot
Comment 13
2016-12-13 08:08:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug